// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    childrenWrapperClassName=""
    className="foo"
    color="denim"
    disabled={false}
    fullWidth={true}
    hover="shadow"
    label="Click Me"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    openInCurrentTab={false}
    shadow={false}
    to=""
    type="button"
    variant="primary"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="h100 flex justify-center items-center"
>
        Click Me
</div>,
      "className": "w100 foo",
      "onClick": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "type": "button",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Click Me",
        "className": "h100 flex justify-center items-center",
      },
      "ref": null,
      "rendered": "Click Me",
      "type": "div",
    },
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="h100 flex justify-center items-center"
>
          Click Me
</div>,
        "className": "w100 foo",
        "onClick": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "type": "button",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Click Me",
          "className": "h100 flex justify-center items-center",
        },
        "ref": null,
        "rendered": "Click Me",
        "type": "div",
      },
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders with data and external link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    childrenWrapperClassName=""
    className="foo"
    color="denim"
    disabled={false}
    fullWidth={true}
    hover="shadow"
    label="Click Me"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    openInCurrentTab={false}
    shadow={false}
    to="https://google.com"
    type="button"
    variant="primary"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w100 foo"
>
        <span
                className="avenir h100 flex justify-center items-center"
        >
                Click Me
        </span>
</div>,
      "className": "text-decoration-none",
      "href": "https://google.com",
      "onClick": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "rel": "noopener",
      "target": "_blank",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="avenir h100 flex justify-center items-center"
>
          Click Me
</span>,
        "className": "w100 foo",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Click Me",
          "className": "avenir h100 flex justify-center items-center",
        },
        "ref": null,
        "rendered": "Click Me",
        "type": "span",
      },
      "type": "div",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 foo"
>
          <span
                    className="avenir h100 flex justify-center items-center"
          >
                    Click Me
          </span>
</div>,
        "className": "text-decoration-none",
        "href": "https://google.com",
        "onClick": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "rel": "noopener",
        "target": "_blank",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="avenir h100 flex justify-center items-center"
>
            Click Me
</span>,
          "className": "w100 foo",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Click Me",
            "className": "avenir h100 flex justify-center items-center",
          },
          "ref": null,
          "rendered": "Click Me",
          "type": "span",
        },
        "type": "div",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders with data and internal link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    childrenWrapperClassName=""
    className="foo"
    color="denim"
    disabled={false}
    fullWidth={true}
    hover="shadow"
    label="Click Me"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    openInCurrentTab={false}
    shadow={false}
    to="/products"
    type="button"
    variant="primary"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="w100 foo"
>
        <span
                className="h100 flex justify-center items-center"
        >
                Click Me
        </span>
</div>,
      "className": "text-decoration-none",
      "onClick": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "replace": false,
      "to": "/products",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <span
          className="h100 flex justify-center items-center"
>
          Click Me
</span>,
        "className": "w100 foo",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Click Me",
          "className": "h100 flex justify-center items-center",
        },
        "ref": null,
        "rendered": "Click Me",
        "type": "span",
      },
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="w100 foo"
>
          <span
                    className="h100 flex justify-center items-center"
          >
                    Click Me
          </span>
</div>,
        "className": "text-decoration-none",
        "onClick": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "replace": false,
        "to": "/products",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="h100 flex justify-center items-center"
>
            Click Me
</span>,
          "className": "w100 foo",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Click Me",
            "className": "h100 flex justify-center items-center",
          },
          "ref": null,
          "rendered": "Click Me",
          "type": "span",
        },
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    childrenWrapperClassName=""
    className=""
    color="white-denim"
    disabled={false}
    fullWidth={false}
    hover="shadow"
    label=""
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    openInCurrentTab={false}
    shadow={false}
    to=""
    type="button"
    variant="primary"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="h100 flex justify-center items-center"
/>,
      "className": "",
      "onClick": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "type": "button",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "",
        "className": "h100 flex justify-center items-center",
      },
      "ref": null,
      "rendered": "",
      "type": "div",
    },
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="h100 flex justify-center items-center"
/>,
        "className": "",
        "onClick": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "type": "button",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "h100 flex justify-center items-center",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
